--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -138,7 +138,7 @@
                 result.style.color = "green";
                 result.textContent += " 延長1週";
             } else if (total >= 70) {
-                result.style.color = "yellow";
+                result.style.color = "grown";
                 result.textContent += " 延長3天";
             } else if (total >= 60) {
                 result.style.color = "blue";
