--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <script>
         function populateSelects() {
-            let options = ["請選擇", "5 - 有具體成果", "1 - 有做沒做好", "0 - 無具體事證", "-5 - 未做到"];
+            let options = ["請選擇", "5 - 有具體成果", "3 - 有做沒成果", "0 - 無具體事證", "-5 - 未做到"];
             let selects = document.querySelectorAll('.scoreSelect');
             selects.forEach(select => {
                 options.forEach(option => {
@@ -130,7 +130,7 @@
                 result.textContent += " 不及格(去睡路邊)";
             } else if (total >= 123) {
                 result.style.color = "orange";
-                result.textContent += " 延長2週";
+                result.textContent += " 真的假的?延長2週";
             } else if (total >= 117) {
                 result.style.color = "limegreen";
                 result.textContent += " 延長1週";
