--- a/index.html
+++ b/index.html
@@ -133,16 +133,16 @@
                 result.textContent += " 真的假的?延長2週";
             } else if (total >= 117) {
                 result.style.color = "limegreen";
-                result.textContent += " 延長1週";
+                result.textContent += " 還不錯哦!延長1週";
             } else if (total >= 104) {
                 result.style.color = "green";
-                result.textContent += " 延長3天";
+                result.textContent += "請加把勁 延長3天";
             } else if (total >= 91) {
                 result.style.color = "brown";
-                result.textContent += " 延長2天";
+                result.textContent += " 加油好嗎! 延長2天";
             } else if (total >= 78) {
                 result.style.color = "blue";
-                result.textContent += " 延長1天";
+                result.textContent += " 完全不行啊! 延長1天";
             }
         }
 
