--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <script>
         function populateSelects() {
-            let options = ["請選擇", "5 - 有具體成果", "3 - 有做沒卓越成果", "0 - 無具體事證", "-5 - 未做到"];
+            let options = ["請選擇", "5 - 有具體(卓越)成果", "3 - 有做沒卓越成果", "0 - 無具體成果", "-5 - 未做到"];
             let selects = document.querySelectorAll('.scoreSelect');
             selects.forEach(select => {
                 options.forEach(option => {
