--- a/index.html
+++ b/index.html
@@ -55,12 +55,42 @@
                 <th>分數</th>
             </tr>
         </thead>
-        <tbody id="scoreTable">
+                <tbody id="scoreTable">
+            <!-- 心靈關懷 -->
             <tr><td rowspan="5">心靈關懷</td><td>1. 是否有主動關心老公心理狀況</td><td><select class="scoreSelect"></select></td></tr>
             <tr><td>2. 是否有照顧老公心情</td><td><select class="scoreSelect"></select></td></tr>
             <tr><td>3. 尊重老公想法與意願</td><td><select class="scoreSelect"></select></td></tr>
             <tr><td>4. 愛護保護老公，發自內心的喜愛</td><td><select class="scoreSelect"></select></td></tr>
             <tr><td>5. 給予老公正面的稱讚與感謝</td><td><select class="scoreSelect"></select></td></tr>
+
+            <!-- 身體照顧 -->
+            <tr><td rowspan="3">身體照顧</td><td>6. 是否有關心老公身體狀況</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>7. 老公身體受傷調養</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>8. 老公身體健康的保養作為</td><td><select class="scoreSelect"></select></td></tr>
+
+            <!-- 溝通品質 -->
+            <tr><td rowspan="11">溝通品質</td><td>9. 老公說話時是否有專注聆聽</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>10. 是否有記下老公的需求與重點</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>11. 主動提出自己想協助的工作內容</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>12. 若有困難主動提出討論</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>13. 主動安排時間討論與溝通</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>14. 不敷衍了事</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>15. 思考方式從個人轉換成家庭(我們)</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>16. 針對做法與決策應全部提出討論</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>17. 面對問題時，先回答問題再說細節</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>18. 承諾或達成共識要全然接受並遵守不能打折</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>19. 先聽對方說話(用心)不要打斷插話</td><td><select class="scoreSelect"></select></td></tr>
+
+            <!-- 家庭維持 -->
+            <tr><td rowspan="3">家庭維持</td><td>20. 開支控管</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>21. 環境整理(除清潔外的整理與空間規劃)</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>22. 與家庭成員照顧(包括父母)</td><td><select class="scoreSelect"></select></td></tr>
+
+            <!-- 未來規劃 -->
+            <tr><td rowspan="4">未來規劃</td><td>23. 小孩人品與教育學習</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>24. 家庭收支規劃</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>25. 家庭設備維護增減</td><td><select class="scoreSelect"></select></td></tr>
+            <tr><td>26. 空間規劃精進</td><td><select class="scoreSelect"></select></td></tr>
         </tbody>
     </table>
 
@@ -97,22 +127,51 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        function calculateTotal() {
-            let total = 0;
-            document.querySelectorAll('.scoreSelect').forEach(select => {
-                let value = parseInt(select.value, 10) || 0;
-                total += value;
-            });
+    function calculateTotal() {
+        let total = 0;
 
-            let result = document.getElementById('totalScore');
-            result.textContent = `總分：${total}`;
-            result.style.fontSize = "50px";
-            result.style.color = total > 110 ? "orange" : 
-                                total > 100 ? "limegreen" : 
-                                total > 85 ? "green" : 
-                                total > 70 ? "yellow" : 
-                                total > 60 ? "blue" : "red";
+        document.querySelectorAll("tbody tr").forEach(row => {
+            let category = row.cells[0].textContent.trim(); // 取得類別
+            let select = row.querySelector(".scoreSelect");
 
+            if (select && select.value) {
+                let score = parseInt(select.value);
+                
+                // 加權計分
+                if (category.includes("心靈關懷")) {
+                    score *= 2;
+                } else if (category.includes("身體照顧")) {
+                    score *= 2;
+                } else if (category.includes("溝通品質")) {
+                    score *= 2;
+                }
+
+                total += score;
+            }
+        });
+
+        let result = document.getElementById('totalScore');
+        result.textContent = "總分：" + total.toFixed(1);
+        result.style.fontSize = "50px";
+
+        if (total < 78) {
+            result.style.color = "red";
+            result.textContent += " 不及格(去睡路邊)";
+        } else if (total >= 123) {
+            result.style.color = "orange";
+            result.textContent += " 真的假的?延長2週";
+        } else if (total >= 117) {
+            result.style.color = "limegreen";
+            result.textContent += " 還不錯哦!延長1週";
+        } else if (total >= 104) {
+            result.style.color = "green";
+            result.textContent += "請加把勁 延長3天";
+        } else if (total >= 91) {
+            result.style.color = "brown";
+            result.textContent += " 加油好嗎! 延長2天";
+        } else if (total >= 78) {
+            result.style.color = "blue";
+            result.textContent += " 完全不行啊! 延長1天";
             return total;
         }
 
